Basic 8-bit layout

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,8 +1,13 @@
 <div class='sm-12 md-4 col sidebar'>
 
   <div class='paper'>
+
+    <div class='sidebar-logo' style='text-align:center'>
+      <img src='/images/8bitlabs.png' alt='8-Bit Labs'  class='no-responsive no-border'/>
+    </div>
+
     <h3 class='sidebar-title' style='text-align:center'>
-      <a href='/docs'>Experiments</a>
+      <a href='#'>Experiments</a>
     </h3>
     <div class='row'>
 
