--- a/css/site.css
+++ b/css/site.css
@@ -1,3 +1,37 @@
+@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Press+Start+2P);
+
+html {
+  font-family: "Press Start 2P", sans-serif;
+}
+
+p,
+a,
+button,
+li,
+table,
+thead,
+tbody,
+th,
+tr,
+td,
+input,
+textarea,
+select,
+option {
+  font-family: "Press Start 2P", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Press Start 2P", sans-serif;
+  font-weight: normal;
+}
+
 html.dark  body {
   background: #41403e;
 }
