Making progress on posts

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,7 +7,7 @@
     </div>
 
     <h3 class='sidebar-title' style='text-align:center'>
-      <a href='#'>Experiments</a>
+      <a href='/'>Experiments</a>
     </h3>
     <div class='row'>
 
