--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="/css/8bitlabs.css" />
+  <link rel="stylesheet" href="/css/site.css" />
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 </head>
