--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,9 +2,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="stylesheet" href="/css/8bitlabs.css" />
+  <meta
+    name="description"
+    content="Explorations in 8-Bit Retro Computing"
+  />
+  <link rel="canonical" href="https://8bitlabs.ca" />
+  <link rel="stylesheet" href="/css/pico.css" />
   <link rel="stylesheet" href="/css/site.css" />
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 </head>
