--- a/css/site.css
+++ b/css/site.css
@@ -1,5 +1,75 @@
-.post-list {
-  margin-left: -4px;
-  margin-right: -4px;
-  padding: 16px;
+@import url(https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,300&display=swap);
+
+/* Global CSS variables */
+:root {
+  --spacing-company: 8px;
+  --font-weight: 400;
+  --border-radius: 0;
+}
+
+/* Typography */
+h2,
+h3,
+hgroup> :last-child {
+  font-weight: 200;
+}
+
+small {
+  color: var(--muted-color);
+}
+
+/* Header */
+.hero {
+  background-color: black;
+  background-image: url("/assets/img/header1.png");
+  background-position: center;
+  background-size: cover;
+  height: 320px;
+}
+
+header hgroup> :last-child {
+  color: var(--h3-color);
+}
+
+header hgroup {
+  margin-bottom: var(--spacing-company);
+}
+
+hgroup h2 {
+  font-family: "Press Start 2P", sans-serif;
+  font-weight: normal;
+  color: var(--primary);
+}
+
+hgroup h2 a {
+  color: var(--primary);
+}
+
+/* Nav */
+summary[role="link"].contrast:is([aria-current], :hover, :active, :focus) {
+  background-color: transparent;
+  color: var(--contrast-hover);
+}
+
+/* Main */
+@media (min-width: 992px) {
+  main .grid {
+    grid-column-gap: var(--spacing-company);
+    grid-template-columns: auto 25%;
+  }
+}
+
+form.grid {
+  grid-row-gap: 0;
+}
+
+/* Aside nav */
+aside img {
+  margin-bottom: 0.25rem;
+}
+
+aside p {
+  margin-bottom: var(--spacing-company);
+  line-height: 1.25;
 }
