--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,5 +10,9 @@
   <link rel="stylesheet" href="/css/pico.css" />
   <link rel="stylesheet" href="/css/site.css" />
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+
+  <!-- https://pictogrammers.com/docs/guides/iconify/ -->
+  <script src="//code.iconify.design/1/1.0.6/iconify.min.js"></script>
+
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 </head>
