--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
         <ul>
           <li>
             <details role="list" dir="rtl">
-              <summary aria-haspopup="listbox" role="link" class="contrast">Theme</summary>
+              <summary aria-haspopup="listbox" role="link" class="contrast"><span class="iconify" data-icon="mdi-lightbulb-on"></span></summary>
               <ul role="listbox">
                 <li><a href="#" data-theme-switcher="auto">Auto</a></li>
                 <li><a href="#" data-theme-switcher="light">Light</a></li>
