--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -1,14 +1,15 @@
-{% if paginator.total_pages > 1 %}
-<ul>
+<nav class="pagination" role="pagination">
   {% if paginator.previous_page %}
-  <li>
-    <a href="{{ paginator.previous_page_path | prepend: site.baseurl }}">Newer</a>
-  </li>
+    {% if paginator.previous_page == 1 %}
+    <a class="newer-posts" href="{{ site.baseurl }}/"><span class="iconify" data-icon="mdi-arrow-left-thin"></span></a>
+    {% else %}
+    <a class="newer-posts" href="{{ site.baseurl }}/page/{{ paginator.previous_page }}/"><span class="iconify" data-icon="mdi-arrow-left-thin"></span></a>
+    {% endif %}
   {% endif %}
+
+  <span class="page-number">Page {{paginator.page}} of {{paginator.total_pages}}</span>
+
   {% if paginator.next_page %}
-  <li>
-    <a href="{{ paginator.next_page_path | prepend: site.baseurl }}">Older</a>
-  </li>
+  <a class="older-posts" href="{{ site.baseurl }}/page/{{ paginator.next_page }}/"><span class="iconify" data-icon="mdi-arrow-right-thin"></span></a>
   {% endif %}
-</ul>
-{% endif %}
+</nav>
