Cleaning up the design

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
       <nav class="container-fluid">
         <ul>
           <li>
-            <a href="/" class="contrast"><strong>8-Bit Labs</strong></a>
+            <a href="/" class="contrast"><strong>8-Bit <span class="iconify" data-icon="mdi-test-tube"></span> Labs</strong></a>
           </li>
         </ul>
         <ul>
@@ -26,7 +26,7 @@
           </li>
           <li>
             <details role="list" dir="rtl">
-              <summary aria-haspopup="listbox" role="link" class="contrast">Computers</summary>
+              <summary aria-haspopup="listbox" role="link" class="contrast"><span class="iconify" data-icon="mdi-desktop-classic"></span></summary>
               <ul role="listbox">
                 <li><a href="#">Agon</a></li>
                 <li><a href="#">Ben Eater's 6502</a></li>
@@ -37,7 +37,7 @@
           </li>
           <li>
             <details role="list" dir="rtl">
-              <summary aria-haspopup="listbox" role="link" class="contrast">CPUs</summary>
+              <summary aria-haspopup="listbox" role="link" class="contrast"><span class="iconify" data-icon="mdi-chip"></span></summary>
               <ul role="listbox">
                 <li><a href="#">6502</a></li>
                 <li><a href="#">8080</a></li>
