--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
   />
   <link rel="canonical" href="https://8bitlabs.ca" />
   <link rel="stylesheet" href="/css/pico.css" />
+  <link rel="stylesheet" href="/css/code.css" />
   <link rel="stylesheet" href="/css/site.css" />
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 
