--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,46 +7,7 @@
 
     <!-- Hero -->
     <div class="hero" data-theme="dark">
-      <nav class="container-fluid">
-        <ul>
-          <li>
-            <a href="/" class="contrast"><strong>8-Bit <span class="iconify" data-icon="mdi-test-tube"></span> Labs</strong></a>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <details role="list" dir="rtl">
-              <summary aria-haspopup="listbox" role="link" class="contrast"><span class="iconify" data-icon="mdi-lightbulb-on"></span></summary>
-              <ul role="listbox">
-                <li><a href="#" data-theme-switcher="auto">Auto</a></li>
-                <li><a href="#" data-theme-switcher="light">Light</a></li>
-                <li><a href="#" data-theme-switcher="dark">Dark</a></li>
-              </ul>
-            </details>
-          </li>
-          <li>
-            <details role="list" dir="rtl">
-              <summary aria-haspopup="listbox" role="link" class="contrast"><span class="iconify" data-icon="mdi-desktop-classic"></span></summary>
-              <ul role="listbox">
-                <li><a href="#">Agon</a></li>
-                <li><a href="#">Ben Eater's 6502</a></li>
-                <li><a href="#">Commodore 64</a></li>
-                <li><a href="#">RC2014</a></li>
-              </ul>
-            </details>
-          </li>
-          <li>
-            <details role="list" dir="rtl">
-              <summary aria-haspopup="listbox" role="link" class="contrast"><span class="iconify" data-icon="mdi-chip"></span></summary>
-              <ul role="listbox">
-                <li><a href="#">6502</a></li>
-                <li><a href="#">8080</a></li>
-                <li><a href="#">Z80</a></li>
-              </ul>
-            </details>
-          </li>
-        </ul>
-      </nav>
+      {% include nav.html %}
     </div>
     <!-- ./ Hero -->
 
