--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -1,4 +1,4 @@
-<nav class="pagination" role="pagination">
+<nav class="pagination">
   {% if paginator.previous_page %}
     {% if paginator.previous_page == 1 %}
     <a class="newer-posts" href="{{ site.baseurl }}/"><span class="iconify" data-icon="mdi-arrow-left-thin"></span></a>
