Rework the header

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
 <nav class="container-fluid">
   <ul>
     <li>
-      <a href="/" class="contrast"><strong>8-Bit <span class="iconify" data-icon="mdi-test-tube"></span> Labs</span></strong></a>
+      <a href="/" class="contrast"><strong><span class="iconify" data-icon="mdi-test-tube"></span></strong></a>
     </li>
   </ul>
   <ul>
