--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,14 @@
     <!-- Hero -->
     <div class="hero" data-theme="dark">
       {% include nav.html %}
+
+      <header class="container">
+        <hgroup>
+          <h1><a href="/">8-Bit <span class="iconify" data-icon="mdi-test-tube"></span> Labs</a></h1>
+          <h2>Experiments in retro computers, assembly language and electronics</h2>
+        </hgroup>
+      </header>
+
     </div>
     <!-- ./ Hero -->
 
