Fix date and publish

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 
   <hgroup>
     <h2>{{page.title}}</h2>
-    <h3><span class="iconify" data-icon="mdi-calendar-month"></span> {{post.date | date_to_string}}</h3>
+    <h3><span class="iconify" data-icon="mdi-calendar-month"></span> {{page.date | date_to_string}}</h3>
   </hgroup>
 
   {{content | markdownify}}
