--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,10 +19,10 @@
       <details role="list" dir="rtl">
         <summary aria-haspopup="listbox" role="link" class="contrast"><span class="iconify" data-icon="mdi-desktop-classic"></span></summary>
         <ul role="listbox">
-          <li><a href="#">Agon</a></li>
-          <li><a href="#">Ben Eater's 6502</a></li>
-          <li><a href="#">Commodore 64</a></li>
-          <li><a href="#">RC2014</a></li>
+          <li><a href="/Tags/agon.html">Agon</a></li>
+          <li><a href="/Tags/eater.html">Ben Eater's 6502</a></li>
+          <li><a href="/Tags/c64.html">Commodore 64</a></li>
+          <li><a href="/Tags/rc2014.html">RC2014</a></li>
         </ul>
       </details>
     </li>
@@ -30,9 +30,9 @@
       <details role="list" dir="rtl">
         <summary aria-haspopup="listbox" role="link" class="contrast"><span class="iconify" data-icon="mdi-chip"></span></summary>
         <ul role="listbox">
-          <li><a href="#">6502</a></li>
-          <li><a href="#">8080</a></li>
-          <li><a href="#">Z80</a></li>
+          <li><a href="/Tags/6502.html">6502</a></li>
+          <li><a href="/Tags/8080.html">8080</a></li>
+          <li><a href="/Tags/z80.html">Z80</a></li>
         </ul>
       </details>
     </li>
