Add Google Analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,5 +26,7 @@
 
   <!-- Minimal theme switcher -->
   <script src="/js/minimal-theme-switcher.js"></script>
+
+  {% include analytics.html %}
 </body>
 </html>
