Add a Game Boy tag

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -22,6 +22,7 @@
           <li><a href="/Tags/agon.html">Agon</a></li>
           <li><a href="/Tags/eater.html">Ben Eater's 6502</a></li>
           <li><a href="/Tags/c64.html">Commodore 64</a></li>
+          <li><a href="/Tags/gameboy.html">Game Boy</a></li>
           <li><a href="/Tags/rc2014.html">RC2014</a></li>
         </ul>
       </details>
@@ -30,9 +31,9 @@
       <details role="list" dir="rtl">
         <summary aria-haspopup="listbox" role="link" class="contrast"><span class="iconify" data-icon="mdi-chip"></span></summary>
         <ul role="listbox">
-          <li><a href="/Tags/6502.html">6502</a></li>
-          <li><a href="/Tags/8080.html">8080</a></li>
-          <li><a href="/Tags/z80.html">Z80</a></li>
+          <li><a href="/Tags/6502.html">MOS 6502</a></li>
+          <li><a href="/Tags/8080.html">Intel 8080</a></li>
+          <li><a href="/Tags/z80.html">Zilog Z80</a></li>
         </ul>
       </details>
     </li>
