Add GitHub link to the nav bar

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,7 +7,7 @@
   <ul>
     <li>
       <details role="list" dir="rtl">
-        <summary aria-haspopup="listbox" role="link" class="contrast"><span class="iconify" data-icon="mdi-lightbulb-on"></span></summary>
+        <summary aria-haspopup="listbox" role="link" class="contrast" title="Theme"><span class="iconify" data-icon="mdi-lightbulb-on"></span></summary>
         <ul role="listbox">
           <li><a href="#" data-theme-switcher="auto">Auto</a></li>
           <li><a href="#" data-theme-switcher="light">Light</a></li>
@@ -17,7 +17,7 @@
     </li>
     <li>
       <details role="list" dir="rtl">
-        <summary aria-haspopup="listbox" role="link" class="contrast"><span class="iconify" data-icon="mdi-desktop-classic"></span></summary>
+        <summary aria-haspopup="listbox" role="link" class="contrast" title="Systems"><span class="iconify" data-icon="mdi-desktop-classic"></span></summary>
         <ul role="listbox">
           <li><a href="/Tags/agon.html">Agon</a></li>
           <li><a href="/Tags/eater.html">Ben Eater's 6502</a></li>
@@ -29,13 +29,16 @@
     </li>
     <li>
       <details role="list" dir="rtl">
-        <summary aria-haspopup="listbox" role="link" class="contrast"><span class="iconify" data-icon="mdi-chip"></span></summary>
+        <summary aria-haspopup="listbox" role="link" class="contrast" title="CPUs"><span class="iconify" data-icon="mdi-chip"></span></summary>
         <ul role="listbox">
           <li><a href="/Tags/6502.html">MOS 6502</a></li>
           <li><a href="/Tags/8080.html">Intel 8080</a></li>
           <li><a href="/Tags/z80.html">Zilog Z80</a></li>
         </ul>
       </details>
+    </li>
+    <li>
+      <a href="https://github.com/8-bitlabs/8-bitlabs.github.io" class="contrast" title="Edit on GitHub"><strong><span class="iconify" data-icon="mdi-github"></span></strong></a>
     </li>
   </ul>
 </nav>
