Change 6502 category to 65xx to include all processors

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -31,7 +31,7 @@
       <details role="list" dir="rtl">
         <summary aria-haspopup="listbox" role="link" class="contrast" title="CPUs"><span class="iconify" data-icon="mdi-chip"></span></summary>
         <ul role="listbox">
-          <li><a href="/Tags/6502.html">MOS 6502</a></li>
+          <li><a href="/Tags/6502.html">MOS 65xx</a></li>
           <li><a href="/Tags/8080.html">Intel 8080</a></li>
           <li><a href="/Tags/z80.html">Zilog Z80</a></li>
         </ul>
